# TelegramAvatarWatch

./: app.py  pyproject.toml
core/: config.py
schemas/: __init__.py  theme_schema.py
themes/: default.json
utils/: __init__.py  utils.py
