[project]
name = "telegramavatarwatch"
version = "0.1.0"
description = ""
authors = [
    {name = "TROJANSCi",email = "log.maksa@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pillow (>=11.1.0,<12.0.0)",
    "telethon (>=1.39.0,<2.0.0)",
    "tzdata (>=2025.2,<2026.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
